--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,18 +4,22 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.3.2",
+    "com.unity.cinemachine": "2.3.4",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.0.4",
     "com.unity.ide.visualstudio": "1.0.5",
     "com.unity.ide.vscode": "1.0.4",
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.probuilder": "4.0.5",
+    "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.purchasing": "2.0.6",
     "com.unity.render-pipelines.high-definition": "6.5.2-preview",
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.1.0",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "6.9.1-preview",
     "com.unity.xr.legacyinputhelpers": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
