--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.3.2",
     "com.unity.cinemachine": "2.3.4",
     "com.unity.collab-proxy": "1.2.16",
@@ -14,7 +13,8 @@
     "com.unity.probuilder": "4.0.5",
     "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.purchasing": "2.0.6",
-    "com.unity.render-pipelines.high-definition": "6.5.2-preview",
+    "com.unity.render-pipelines.core": "6.9.1",
+    "com.unity.render-pipelines.high-definition": "6.9.1-preview",
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.1.0",
